--- a/assets/css/sow.css
+++ b/assets/css/sow.css
@@ -29,3 +29,25 @@ nav ul li a:focus {
   color: #007acc;
   outline: none;
 }
+
+/* ANIMACION */
+
+.cover {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background: #222;
+	color: #fff;
+}
+.title {
+	font-size: 3rem;
+	text-transform: uppercase;
+	opacity: 0;
+	animation: fadeIn 2s forwards ease-in;
+}
+@keyframes fadeIn {
+	to {
+		opacity: 1;
+	}
+}
