--- a/assets/css/sow.css
+++ b/assets/css/sow.css
@@ -12,12 +12,14 @@ body {
 
 /* PORTADA */
 .portada {
-    background: linear-gradient(135deg, #d4ff00 0%, #c8f000 100%);
+    background: #d4ff00;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow: visible;
+    margin-bottom: 200px;
 }
 
 .portada-container {
@@ -101,17 +103,20 @@ body {
 } */
 
 .menu-wrapper {
-  position: sticky;
+  position: fixed;
   top: 2vh;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .menu {
   background: black;
-  color: #b0ff00;
+  color: #d4ff00;
   padding: 15px 30px;
   border-radius: 50px;
   cursor: pointer;
@@ -158,12 +163,13 @@ body {
 }
 
 .menu-items a {
-  color: #b0ff00;
+  color: #d4ff00;
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: 1px;
 }
+
 
 .main-title {
     font-size: clamp(40px, 8vw, 90px);
@@ -197,7 +203,7 @@ body {
 .content {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 60px 40px;
+    padding: 100px 40px;
 }
 
 .section-title {
@@ -206,7 +212,7 @@ body {
     margin-bottom: 30px;
     letter-spacing: 1px;
     text-align: center;
-    border-bottom: 2px solid #b0ff00;
+    border-bottom: 2px solid #d4ff00;
 }
 
 .section-title a {
@@ -219,8 +225,8 @@ body {
     line-height: 1.8;
     margin-bottom: 40px;
     text-align: justify;
-    /* border-left: 2px solid #b0ff00;
-    border-right: 2px solid #b0ff00;
+    /* border-left: 2px solid #d4ff00;
+    border-right: 2px solid #d4ff00;
     padding-left: 2vh;
     padding-right: 2vh; */
 }
@@ -236,10 +242,15 @@ body {
     margin-bottom: 40px;
 }
 
+.media-grid img {
+    width: 100%;
+    height: auto;
+}
+
 .media-container {
-    background-color: #d3d3d3;
     aspect-ratio: 16/10;
     border-radius: 8px;
+    
 }
 
 .text-columns {
